--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.0.9",
     "@nestjs/typeorm": "^8.0.2",
+    "class-transformer": "^0.4.0",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
